@@ -267,50 +267,4 @@ class cmd_svn_layout(Command):
                     branch.get_push_merged_revisions())
 
 
-class cmd_svn_serve(Command):
-    """Provide access to a Bazaar branch using the Subversion ra_svn protocol.
 
-    This command is experimental and doesn't support incremental updates 
-    properly yet.
-    """
-    takes_options = [
-        Option('inet',
-               help='serve on stdin/out for use from inetd or sshd'),
-        Option('port',
-               help='listen for connections on nominated port of the form '
-                    '[hostname:]portnumber. Passing 0 as the port number will '
-                    'result in a dynamically allocated port.',
-               type=str),
-        Option('directory',
-               help='serve contents of directory',
-               type=unicode)
-    ]
-
-    def run(self, inet=None, port=None, directory=None):
-        from bzrlib import (
-            trace,
-            )
-        from bzrlib.plugins.svn import lazy_check_versions
-        lazy_check_versions()
-        from subvertpy.ra_svn import SVNServer, TCPSVNServer, SVN_PORT
-        from bzrlib.plugins.svn.server import BzrServerBackend
-        import os
-        import sys
-
-        trace.warning("server support in bzr-svn is experimental.")
-
-        if directory is None:
-            directory = os.getcwd()
-
-        backend = BzrServerBackend(directory)
-        if inet:
-            def send_fn(data):
-                sys.stdout.write(data)
-                sys.stdout.flush()
-            server = SVNServer(backend, sys.stdin.read, send_fn, 
-                               self.outf)
-        else:
-            if port is None:
-                port = SVN_PORT
-            server = TCPSVNServer(backend, ('0.0.0.0', port), self.outf)
-        server.serve()
